[package]
name = "hpm_cli"
version = "0.1.0"
edition = "2021"
description = "HPM(HotPE Module) Manager"
authors = ["VirtualHotBar <blog.hotpe.top>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"

[dependencies]
rust-embed = "8.4"
tempfile = "3.10"
lazy_static = "1.4"
clap = "4.5"
sevenz-rust = "0.6"
# glob = "0.3"
rust-ini = "0.21"
encoding_rs = "0.8"
indicatif = "0.17"
dirs = "5.0"
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi","errhandlingapi"] }
vc-ltl = "5.1.1"
#threadpool = "1.8"
#num_cpus = "1.16"
#zstd = "0.13"
#colored = "2.1"
